# krouth_flask

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  run.sh
integrations/: get_spotify_data.py
krouth_site/: app.py  route.py  views.py
krouth_site/static/: base.css  home_page.css  navbar.css
krouth_site/templates/: about.html  index.html  layout.html  navbar.html
src/: README.md  project_info.md  pyproject.toml
src/krouth_site/static/: base.css  home_page.css  navbar.css
src/krouth_site/templates/: navbar.html  stuff.html
